# for_developers

./: README.md  astro.config.mjs  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: docs.yml
docs/: gen_ref_pages.py
docs/backend/: for_developers.md  gen_ref_pages.py  index.md  openapi.yaml  persistency.md  simulator_management.md
docs/converter/: index.md
docs/documentation/: index.md
docs/frontend/: examples.md  for_developers.md  index.md  three_editor_development.md
docs/other/: index.md
public/: openapi.yaml
src/content/docs/: 404.md  index.mdx
src/content/docs/api-reference/: auth.md  jobs.md  overview.md  results.md  user.md
src/content/docs/architecture/: auth-model.md  data-flow.md  overview.md  project-json-schema.md
src/content/docs/backend/: api-endpoints.md  api-reference.mdx  database.md  docker-deployment.md  overview.md  simulation-lifecycle.md  simulator-management.md  testing.md
src/content/docs/contributing/: code-style.md  glossary.md  guide.md
src/content/docs/converter/: adding-a-simulator.md  conversion-flow.md  fluka.md  geant4.md  overview.md  shieldhit.md  testing.md
src/content/docs/docker-setup/: docker-celery.mdx  docker-frontend-demo.mdx  docker-slurm.mdx
src/content/docs/frontend/: 3d-editor.md  adding-commands.md  auth-flows.md  geant4-wasm.md  overview.md  pyodide-converter.md  simulation-services.md  testing.md
src/content/docs/local-setup/: local-celery.mdx  local-frontend-demo.mdx  local-slurm.mdx
src/content/docs/rework-orchestration/: index.mdx
src/styles/: custom.css
(+13 files in other folders)
