[tool.poetry]
name = "yaptide developer documentation"
version = "1.0.0"
description = "Yaptide Yet Another Particle Transport IDE"
package-mode = false
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
mkdocs = "1.5.3"
mkdocs-coverage = "1.0.0"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-material = "9.5.18"
mkdocs-gen-files = "0.5.0"
mkdocs-literate-nav = "0.6.1"
mkdocs-section-index = "0.3.9"
mkdocs-render-swagger-plugin = "0.1.2"